--- a/app/views/sprint4.html
+++ b/app/views/sprint4.html
@@ -16,6 +16,7 @@
         <li><a href="/lis/4/index">Start page</a></li>
         <li><a href="/lis/4/lis-home">My lis home page</a></li>
         <li><a href="/lis/4/part-help">Part help outcome</a></li>
+        <li><a href="/lis/4/live/others/people">Does anyone else live in your home?</a></li>
       </ul>
       <ul>
         <li><span class="strong">What we plan to test:</span> </li>
