--- a/app/views/lis/4/live/others/boarder.html
+++ b/app/views/lis/4/live/others/boarder.html
@@ -13,22 +13,22 @@
     <div class="column-two-thirds">
 
       <h1 class="heading-large">
-        Are they border or lodger?
+        Are they a boarder or lodger?
       </h1>
   
-      <form action="" method="get" class="form">
+      <form action="boarder-handler" method="get" class="form">
           <div class="form-item-wrapper">
             <fieldset>
               <div class="inline-form-groups">
                 <div class="form-group">
-                  <input type="radio" id="binary-yes" name="work" value="yes">
-                  <label class="form-control-radio" for="binary-yes">
+                  <input type="radio" id="yes" name="boarder" value="yes">
+                  <label class="form-control-radio" for="yes">
                     Yes
                   </label>
                 </div>
                 <div class="form-group">
-                  <input type="radio" id="binary-no" name="work" value="no">
-                  <label class="form-control-radio" for="binary-no">
+                  <input type="radio" id="no" name="boarder" value="no">
+                  <label class="form-control-radio" for="no">
                     No
                   </label>
                 </div>
@@ -38,7 +38,6 @@
 
         {{
           form_macros.button({
-            href: 'work',
             label: 'Save and continue'
           })
         }}
