--- a/app/views/lis/4/live/others/name.html
+++ b/app/views/lis/4/live/others/name.html
@@ -18,7 +18,7 @@
     Person's details
   </h1>
 
-  <form action="" method="get" class="form">
+  <form action="others-details" method="get" class="form">
 
     {{
       form_macros.text_field({
@@ -33,19 +33,33 @@
         label: 'Last name'
       })
     }}
-
-    {{
-      form_macros.date_field({
-        label: 'Date of birth',
-        hint_date: '31 7 1961',
-        id_prefix: 'dob-'
-      })
-    }}
-
+    
+    <div class="form-item-wrapper">
+        <fieldset>
+          <legend class="form-label-bold">
+            Date of birth
+          </legend>
+          <p class="form-hint">For example 31 7 1961</p>
+          <div class="inline-form-groups">
+            <div class="form-group">
+              <label class="form-label" for="day">Day</label>
+              <input class="form-control form-control-2-chars" id="day" value="day"  type="number" min="0" max="31">
+            </div>
+            <div class="form-group">
+              <label class="form-label" for="month">Month</label>
+              <input class="form-control form-control-2-chars" id="month" value="month"  type="number" min="0" max="12">
+            </div>
+            <div class="form-group">
+              <label class="form-label" for="year">Year</label>
+              <input class="form-control form-control-4-chars" id="year" value="year" name="dob" type="number" min="0">
+            </div>
+          </div>
+        </fieldset>
+      </div>
+    
     {{
       form_macros.button({
-        href: 'relationship',
-        label: 'Save and continue'
+        label: 'Save and continue',
       })
     }}
     <p class="navigation"><a class="cancel" href="../lis-home">Save and come back later</a></p>
