--- a/app/views/lis/4/live/others/relationship.html
+++ b/app/views/lis/4/live/others/relationship.html
@@ -26,13 +26,13 @@
         </label>
       </div>
       <div class="form-group">
-        <input type="radio" id="foster" value="foster" name="relationship">
+        <input type="radio" id="foster" value="child" name="relationship">
         <label class="form-control-radio" for="foster">
           My foster child
         </label>
       </div>
       <div class="form-group">
-        <input type="radio" id="guardian" value="guardian" name="relationship">
+        <input type="radio" id="guardian" value="child" name="relationship">
         <label class="form-control-radio" for="guardian">
           I am their legal guardian
         </label>
