--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,6 +13,7 @@
       </p>
       <ul>
         <li class="heading-medium">Current sprint - Alpha sprint 4 </li>
+        <li>We're currently working on this version</li>
         <li>(Mr &amp; Mrs Crawford persona) - Created 28 June 2016</li>
         <li><a href="/sprint4">View</a></li>
       </ul>
