--- a/app/views/lis/4/lis-home.html
+++ b/app/views/lis/4/lis-home.html
@@ -22,19 +22,19 @@
         <table class="data-table">
           <tr>
             <td>About you</td>
-            <td><a href="you/registration">Start</a></td>
+            <td><span class="notstarted-text">Not started</span> <a href="you/registration">Start</a></td>
           </tr>
           <tr>
             <td>About your partner</td>
-            <td><a href="partner/partner">Start</a></td>
+            <td><span class="notstarted-text">Not started</span> <a href="partner/partner">Start</a></td>
           </tr>
           <tr>
             <td>Property, savings &amp; money</td>
-            <td><a href="assets/property">Start</a></td>
+            <td><span class="notstarted-text">Not started</span> <a href="assets/property">Start</a></td>
           </tr>
           <tr>
             <td>About where you live</td>
-            <td><a href="live/hospital">Start</a></td>
+            <td><span class="notstarted-text">Not started</span> <a href="live/hospital">Start</a></td>
           </tr>
         </table>
         
