--- a/app/views/lis/4/lis-home3.html
+++ b/app/views/lis/4/lis-home3.html
@@ -27,19 +27,19 @@
         <table class="data-table">
           <tr>
             <td>About you</td>
-            <td><a href="you/about-you-summary">View or edit</a> <img src="/public/images/tick_gr.png" class="section-tick"></td>
+            <td><span class="complete-text">Complete</span> <a href="you/about-you-summary">View or edit</a></td>
           </tr>
           <tr>
             <td>About your partner</td>
-            <td><a href="partner/summary">View or edit</a> <img src="/public/images/tick_gr.png" class="section-tick"></td>
+            <td><span class="complete-text">Complete</span> <a href="partner/summary">View or edit</a></td>
           </tr>
           <tr>
             <td>Property, savings &amp; money</td>
-            <td><a href="assets/property">Start</a></td>
+            <td><span class="notstarted-text">Not started</span> <a href="assets/property">Start</a></td>
           </tr>
           <tr>
             <td>About where you live</td>
-            <td><a href="live/home">Start</a></td>
+            <td><span class="notstarted-text">Not started</span> <a href="live/home">Start</a></td>
           </tr>
         </table>
         
