--- a/app/views/sprint4.html
+++ b/app/views/sprint4.html
@@ -15,8 +15,15 @@
       <ul>
         <li><a href="/lis/4/index">Start page</a></li>
         <li><a href="/lis/4/lis-home">My lis home page</a></li>
-        <li><a href="/lis/4/part-help">Part help outcome</a></li>
+        <li><a href="/lis/4/part-help">Part help outcome</a></li>      
       </ul>
+
+      <h2 class="heading-large">Exemption prototypes</h2>
+      <ul>
+        <li><a href="/lis/exemption/hc2certificate">HC2 Certificate</a></li>  
+        <li><a href="/lis/exemption/hc3certificate">HC3 Certificate</a></li>  
+      </ul>
+      
       <ul>
         <li><span class="strong">What we plan to test:</span> </li>
         <!--<li>Full end to end journey for a couple who have a state pension and a private pension.</li>
