--- a/public/stylesheets/nhs_application.css
+++ b/public/stylesheets/nhs_application.css
@@ -1973,6 +1973,27 @@ p.intro-to-list {
   margin: 0.3rem 0.8rem 0 0;
   font-weight: bold; }
 
+.complete-text {
+  border: solid green 2px;
+  border-radius: 5px;
+  color: green;
+  padding: 3px 6px;
+  margin-right: 15px; }
+
+.incomplete-text {
+  border: solid darkorange 2px;
+  border-radius: 5px;
+  color: darkorange;
+  padding: 3px 6px;
+  margin-right: 15px; }
+
+.notstarted-text {
+  border: solid gray 2px;
+  border-radius: 5px;
+  color: gray;
+  padding: 3px 6px;
+  margin-right: 15px; }
+
 .done-panel {
   background-color: #0072C6;
   text-align: center;
@@ -2021,18 +2042,36 @@ hr {
 #global-header a.header-logo {
   float: left; }
 
+.ex-header {
+  color: white;
+  margin-left: 105px; }
+
 .exemption-header {
   background-color: #0072C6;
+  text-align: center;
   color: white;
-  padding: 10px;
-  margin: 10px 0 30px; }
+  padding: 20px 10px;
+  margin: 30px 0; }
   .exemption-header h1 {
     padding-top: 0;
     margin-bottom: 10px; }
-  .exemption-header h4 {
-    padding-top: 0; }
   .exemption-header h2 {
     padding-top: 0; }
+  .exemption-header h4 {
+    padding-top: 0; }
+
+.ex-notes {
+  position: relative;
+  border-bottom: 3px solid #dedede;
+  background: #ededed;
+  padding: 10px 20px 20px 20px; }
+
+.detail-block {
+  float: left;
+  border-top: 5px solid #0072C6;
+  padding: 10px 20px;
+  background: #ededed;
+  width: 92%; }
 
 .certcode {
   font-size: 3.6rem; }
@@ -2040,9 +2079,6 @@ hr {
 hr {
   padding-bottom: 1rem;
   padding-top: 2rem; }
-
-.ex-div {
-  width: device-width; }
 
 .cert-des li {
   list-style-position: inside;
@@ -2058,7 +2094,7 @@ hr {
   margin-bottom: 5px;
   float: right;
   display: inline-block;
-  width: 20%;
+  width: 29%;
   text-align: center;
   font-size: 3rem;
   font-weight: bold; }
