added the javascript to show the correct version of the status tect on the hub page - started, completed etc

--- a/app/views/lis/4/assets/assets-summary.html
+++ b/app/views/lis/4/assets/assets-summary.html
@@ -71,9 +71,14 @@
       </tr>
     </table>
     
-   <p>
-      <a class="button" href="../lis-home4" id="next">Save and continue</a>
-    </p>
+    <form action="assets-done" method="get" class="form">
+      {{
+        form_macros.button({
+          label: 'Save and continue',
+          id : 'next'
+        })  
+      }}
+    </form>
 
   </div>
   </div>
