--- a/app/views/lis/4/lis-home-updated.html
+++ b/app/views/lis/4/lis-home-updated.html
@@ -27,19 +27,19 @@
         <table class="data-table">
           <tr>
             <td>About you</td>
-            <td><span class="complete-text">Complete</span> <a href="you/about-you-summary">View or edit</a></td>
+            <td><span id="about_you_status" class="notstarted-text">{{aboutYouStatus}}</span> <a href="you/registration">Start</a></td>
           </tr>
           <tr>
             <td>About your partner</td>
-            <td><span class="complete-text">Complete</span> <a href="partner/summary">View or edit</a></td>
+            <td><span id="about_partner_status" class="notstarted-text">{{aboutPartnerStatus}}</span> <a href="partner/partner">Start</a></td>
           </tr>
           <tr>
             <td>Property, savings &amp; money</td>
-            <td><span class="complete-text">Complete</span> <a href="assets/assets-summary">View or edit</a></td>
+            <td><span id="property_status" class="notstarted-text">{{propertyStatus}}</span> <a href="assets/property">Start</a></td>
           </tr>
           <tr>
             <td>About where you live</td>
-            <td><span class="complete-text">Complete</span> <a href="live/living-summary">View or edit</a></td>
+            <td><span id="where_you_live_status" class="notstarted-text">{{whereYouLiveStatus}}</span> <a href="live/hospital">Start</a></td>
           </tr>
         </table>
         
