--- a/app/views/lis/4/you/about-you-summary.html
+++ b/app/views/lis/4/you/about-you-summary.html
@@ -86,9 +86,14 @@
 
     </table>
     
-    <p>
-      <a class="button" href="../lis-home2" id="next">Save and continue</a>
-    </p>
+    <form action="you-done" method="get" class="form">
+      {{
+        form_macros.button({
+          label: 'Save and continue',
+          id : 'next'
+        })  
+      }}
+    </form>
 
   </div>
   </div>
