--- a/app/views/lis/4/assets/accounts.html
+++ b/app/views/lis/4/assets/accounts.html
@@ -37,7 +37,7 @@
       })
     }}
     
-    <p class="navigation"><a class="cancel" href="../lis-home3">Save and come back later</a></p>
+    <p class="navigation"><a class="cancel" href="../lis-home">Save and come back later</a></p>
 
   </form>
     </div>
