--- a/app/views/lis/4/assets/premium-bonds.html
+++ b/app/views/lis/4/assets/premium-bonds.html
@@ -37,7 +37,7 @@
       })
     }}
     
-    <p class="navigation"><a class="cancel" href="../lis-home3">Back to application home</a></p>
+    <p class="navigation"><a class="cancel" href="../lis-home">Back to application home</a></p>
 
   </form>
     </div>
