--- a/app/views/lis/4/assets/property.html
+++ b/app/views/lis/4/assets/property.html
@@ -19,20 +19,20 @@
     <span class="form-hint">Do not include the house where you live</span>
   </h1>
 
-  <form action="" method="get" class="form">
+  <form action="property-handler" method="get" class="form">
 
     <div class="form-item-wrapper">
       <fieldset>
         <div class="inline-form-groups">
           <div class="form-group">
-            <input type="radio" id="email" name="contact">
-            <label class="form-control-radio" for="email" data-show="#contact-email-address" data-hide="#contact-mobile-number">
+            <input type="radio" id="yes" name="property" value="yes">
+            <label class="form-control-radio" for="yes">
               Yes
             </label>
           </div>
           <div class="form-group">
-            <input type="radio" id="mobile" name="contact">
-            <label class="form-control-radio" for="mobile" data-hide="#contact-email-address">
+            <input type="radio" id="no" name="property" value="no">
+            <label class="form-control-radio" for="no">
               No
             </label>
           </div>
@@ -40,12 +40,11 @@
 
     {{
       form_macros.button({
-        href: 'money',
         label: 'Save and continue'
       })
     }}
     
-    <p class="navigation"><a class="cancel" href="../lis-home3">Save and come back later</a></p>
+    <p class="navigation"><a class="cancel" href="../lis-home">Save and come back later</a></p>
 
   </form>
       
