--- a/app/views/lis/4/live/mortgaged/joint.html
+++ b/app/views/lis/4/live/mortgaged/joint.html
@@ -44,7 +44,7 @@
       })
     }}
         
-    <p class="navigation"><a class="cancel" href="../lis-home4">Save and come back later</a></p>
+    <p class="navigation"><a class="cancel" href="../lis-home">Save and come back later</a></p>
 
   </form>
     </div>
