--- a/app/views/lis/4/live/rent-includes.html
+++ b/app/views/lis/4/live/rent-includes.html
@@ -63,7 +63,7 @@
       })  
     }}
           </div>
-    <p class="navigation"><a class="cancel" href="../lis-home4">Save and come back later</a></p>
+    <p class="navigation"><a class="cancel" href="../lis-home">Save and come back later</a></p>
   </form>
     </div>
     </div>
