--- a/app/assets/sass/nhs_application.scss
+++ b/app/assets/sass/nhs_application.scss
@@ -389,3 +389,16 @@ hr {
 #global-header a.header-logo {
     float: left;
 }
+
+.email-ex {
+  background-image: url("/public/images/email-screen.gif");
+  background-repeat: no-repeat;
+  width:873px;
+  height:778px;
+  margin-top: 20px;
+  .email-text {
+    padding-top:220px;
+    padding-left:30px;
+    width: 95%;
+  }
+}
