updated you / your partner text

--- a/app/views/lis/4/live/living-summary.html
+++ b/app/views/lis/4/live/living-summary.html
@@ -125,7 +125,7 @@
         <td><a href="others/benefits">Change this</a></td>
       </tr>
       <tr>
-        <td>Are they registered blind?</td>
+        <td>Are they severely sight impaired or registered blind?</td>
         <td>No</td>
         <td><a href="others/blind">Change this</a></td>
       </tr>
