--- a/app/views/lis/4/live/mortgaged/joint.html
+++ b/app/views/lis/4/live/mortgaged/joint.html
@@ -13,9 +13,8 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    Are you a joint owner?
+    Are {{partnerortext}} a joint owner of the place where you live?
   </h1>
-      <p></p>
   
   <form action="" method="get" class="form">
       <div class="form-item-wrapper">
