--- a/app/views/lis/4/live/others/blind.html
+++ b/app/views/lis/4/live/others/blind.html
@@ -13,7 +13,7 @@
     <div class="column-two-thirds">
 
       <h1 class="heading-large">
-        Are they registered blind?
+        Are they severely sight impaired or registered blind?
       </h1>
   
       <form action="" method="get" class="form">
