--- a/app/views/sprint4.html
+++ b/app/views/sprint4.html
@@ -17,6 +17,7 @@
         <li><a href="/lis/4/lis-home">My lis home page</a></li>
         <li><a href="/lis/4/part-help">Part help outcome</a></li>
         <li><a href="/lis/4/live/others/people">Does anyone else live in your home?</a></li>
+        <li><a href="/lis/4/save-continue/ref">Save and restore version B</a></li>
       </ul>
 
       <h2 class="heading-large">Exemption prototypes</h2>
