--- a/app/assets/sass/nhs_application.scss
+++ b/app/assets/sass/nhs_application.scss
@@ -389,3 +389,23 @@ hr {
 #global-header a.header-logo {
     float: left;
 }
+
+.claim-ref {
+  margin: 30px 0;
+  h1 {
+    padding: 0;
+    margin-bottom: 15px;
+  }
+}
+
+
+/* temp styles for printing
+
+#global-header, #footer {
+    display: none;
+}
+
+html, #footer {
+    background-color: white;
+}
+ */
