--- a/app/views/lis/4/live/joint.html
+++ b/app/views/lis/4/live/joint.html
@@ -13,7 +13,7 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    Are you a joint tenant
+    Are {{partnerortext}} a joint tenant of the place where you live?
   </h1>
       <p></p>
   
