--- a/app/views/lis/4/live/others/relationship.html
+++ b/app/views/lis/4/live/others/relationship.html
@@ -40,7 +40,7 @@
       <!--div class="form-group">
         <input type="radio" id="family" value="family" name="relationship">
         <label class="form-control-radio" for="family">
-          A family relation
+          Another family relation
         </label>
       </div>
       <div class="form-group">
