--- a/app/views/lis/4/live/mortgaged/mortgage.html
+++ b/app/views/lis/4/live/mortgaged/mortgage.html
@@ -17,20 +17,20 @@
   <h1 class="heading-large">
     Do you have a mortgage or loan secured on your home?
   </h1>
-  <form action="" method="get" class="form">
+  <form action="mortgage-handler" method="get" class="form">
 
     <div class="form-item-wrapper">
       <fieldset>
         <div class="inline-form-groups">
           <div class="form-group">
-            <input type="radio" id="email" name="contact">
-            <label class="form-control-radio" for="email" data-show="#contact-email-address" data-hide="#contact-mobile-number">
+            <input type="radio" id="yes" value="yes" name="mortgaged">
+            <label class="form-control-radio" for="yes" data-show="#contact-email-address">
               Yes
             </label>
           </div>
           <div class="form-group">
-            <input type="radio" id="mobile" name="contact">
-            <label class="form-control-radio" for="mobile" data-hide="#contact-email-address">
+            <input type="radio" id="no" value="no" name="mortgaged">
+            <label class="form-control-radio" for="no" data-hide="#contact-email-address">
               No
             </label>
           </div>
@@ -40,7 +40,6 @@
 
     {{
       form_macros.button({
-        href: 'mortgage-amount',
         label: 'Save and continue'
       })
     }}
