--- a/app/views/lis/4/assets/other-property.html
+++ b/app/views/lis/4/assets/other-property.html
@@ -15,28 +15,28 @@
   <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
 
   <h1 class="heading-large">
-    Do you have a mortgage or loan secured on your home?
+    Do {{partnerortext}} have any other property or land in this country or abroad?
+    <span class="form-hint">Do not include the house where you live</span>
   </h1>
-  <form action="mortgage-handler" method="get" class="form">
+
+  <form action="property-handler" method="get" class="form">
 
     <div class="form-item-wrapper">
       <fieldset>
         <div class="inline-form-groups">
           <div class="form-group">
-            <input type="radio" id="yes" value="yes" name="mortgaged">
-            <label class="form-control-radio" for="yes" data-show="#contact-email-address">
+            <input type="radio" id="yes" name="property" value="yes">
+            <label class="form-control-radio" for="yes">
               Yes
             </label>
           </div>
           <div class="form-group">
-            <input type="radio" id="no" value="no" name="mortgaged">
-            <label class="form-control-radio" for="no" data-hide="#contact-email-address">
+            <input type="radio" id="no" name="property" value="no">
+            <label class="form-control-radio" for="no">
               No
             </label>
           </div>
         </div>
-      </fieldset>
-    </div>
 
     {{
       form_macros.button({
@@ -44,11 +44,14 @@
       })
     }}
     
-    <p class="navigation"><a class="cancel" href="../../lis-home">Save and come back later</a></p>
+    <p class="navigation"><a class="cancel" href="../lis-home">Save and come back later</a></p>
 
   </form>
-    </div>
-    </div>
+      
+  </div>
+    
+  </div>
+  
 </main>
 
 {% endblock %}
