--- a/app/views/lis/4/ko.html
+++ b/app/views/lis/4/ko.html
@@ -51,7 +51,7 @@
       </div>
     {{
       form_macros.button({
-        label: 'Save and continue'
+        label: 'Next'
       })  
     }}
           </div>
