--- a/app/views/lis/4/assets/value.html
+++ b/app/views/lis/4/assets/value.html
@@ -35,7 +35,8 @@
         </div>
 
       </form>
-      
+          <p class="navigation"><a class="cancel" href="../lis-home">Save and come back later</a></p>
+
   </div>
     
 </div>
