--- a/app/views/lis/4/you/contact-prefs.html
+++ b/app/views/lis/4/you/contact-prefs.html
@@ -38,9 +38,10 @@
     {{
       form_macros.button({
         href: 'work',
-        label: 'Next'
+        label: 'Save and continue'
       })
     }}
+    <p class="navigation"><a class="cancel" href="../lis-home">Save and come back later</a></p>
   </form>
     </div>
     </div>
