--- a/app/views/lis/4/save-continue/code.html
+++ b/app/views/lis/4/save-continue/code.html
@@ -13,9 +13,8 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    Enter the telephone number you would like us to send access codes to
+    Enter the reference number we sent to the number ending in 123
   </h1>
-      <p>This should be a phone you have access to when signing in.</p>
       <form action="" method="get" class="form">
         <div class="form-item-wrapper">
           <fieldset>
@@ -28,11 +27,11 @@
             {{
               form_macros.button({
                 label: 'Next',
-                href: 'code'
+                href: 'success'
               })
             }}
-    <p class="navigation"><a class="cancel" href="../lis-home">I can't do this right now</a></p>
-        
+            <p class="navigation"><a class="cancel" href="">I didn't receive a code</a></p>
+
   </form>
     </div>
     </div>
