changes to exemption screens

--- a/app/views/lis/exemption/email.html
+++ b/app/views/lis/exemption/email.html
@@ -9,7 +9,7 @@
           <img src="{{assetPath}}images/nhs-rev-logotype.svg" alt="">
         </a>
 
-        <h1 class="heading-large ex-header">HC? Certificate for help with health costs</h1>
+        <h1 class="heading-large ex-header">HC3 Certificate for help with health costs</h1>
 
         {% block header-controls %}{% endblock %}
 
