changes to exemption links for sprint 4

--- a/app/views/lis/4/part-help.html
+++ b/app/views/lis/4/part-help.html
@@ -17,8 +17,8 @@
   </div>
   
   <ul>
-    <li>A copy of your certificate has been emailed to <a href="../exemption/email">m.smith@inter.net</a></li>
-    <li><a href="../exemption/hc3certificate">View my certificate</a></li>
+    <li>A copy of your certificate has been emailed to <a href="exemption/email">m.smith@inter.net</a></li>
+    <li><a href="exemption/hc3certificate">View my certificate</a></li>
     <li><a href="/public/images/hc3.pdf" target="blank">Download my certificate</a></li>
     <li>You can download or print a copy of your certificate at any time by signing into this service.</li>
     <li>      
