--- a/app/views/sprint4.html
+++ b/app/views/sprint4.html
@@ -22,9 +22,9 @@
 
       <h2 class="heading-large">Exemption prototypes</h2>
       <ul>
-        <li><a href="/lis/exemption/hc2certificate">HC2 Certificate</a></li>  
-        <li><a href="/lis/exemption/hc3certificate">HC3 Certificate</a></li>
-        <li><a href="/lis/exemption/email">Email Certificate</a></li>
+        <li><a href="/lis/4/exemption/hc2certificate">HC2 Certificate</a></li>  
+        <li><a href="/lis/4/exemption/hc3certificate">HC3 Certificate</a></li>
+        <li><a href="/lis/4/exemption/email">Email Certificate</a></li>
       </ul>
       
       <ul>
