updated the user journey for save and continue

--- a/app/views/lis/5/need-to-know.html
+++ b/app/views/lis/5/need-to-know.html
@@ -13,27 +13,18 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    Low Income Scheme
+    What you will need to apply
   </h1>
-      
-  <p>To apply we need to ask you about the following:</p>
+  
+  <p>You should have details of the following ready before you continue:</p>
+
   <ul class="list list-bullet">
-    <li>income you receive, including work, pensions or benefits</li>
-    <li>income your partner receives</li>
-    <li>mortgages, rent or your council tax you pay</li>
-    <li>property, land, bank or savings accounts you have</li>
-    <li>other people who live in your household</li>
+    <li>pensions or benefits you or your partner receive</li>
+    <li>mortgages, rent or council tax you pay</li>
+    <li>bank or savings accounts you have</li>
+    <li>other people who live in your household, including their income</li>
   </ul>
       
-  <p>You should have this information ready before continuing.</p>
-  <!--
-  <h2 class="heading-medium">Create an account</h2>
-  <ul class="list list-bullet lead-list">  
-    <li class="lead-list">Creating an account allows you to:</li>
-    <li>save your information and come back later if you need to leave this service</li>
-    <li>renew your certificate more quickly in the future</li>
-  </ul>
-  -->
   <form action="" method="get" class="form">
     {{
       form_macros.button({
