--- a/app/views/lis/5/live/tax-amount.html
+++ b/app/views/lis/5/live/tax-amount.html
@@ -23,31 +23,39 @@
     <div class="form-item-wrapper">
       <div class="form-group">
         <input type="radio" id="week" name="minor">
-        <label class="form-control-radio" for="week">
+        <label class="form-control-radio js-toggle" for="week" data-hide="#tax-months">
           Every week
         </label>
       </div>
       <div class="form-group">
         <input type="radio" id="fortnight" name="minor">
-        <label class="form-control-radio" for="fortnight">
+        <label class="form-control-radio js-toggle" for="fortnight" data-hide="#tax-months">
           Every two weeks
         </label>
       </div>
       <div class="form-group">
         <input type="radio" id="fourweekly" name="minor">
-        <label class="form-control-radio" for="fourweekly">
+        <label class="form-control-radio js-toggle" for="fourweekly" data-hide="#tax-months">
          Every four weeks
         </label>
       </div>
       <div class="form-group">
         <input type="radio" id="month" name="minor">
-        <label class="form-control-radio" for="month">
+        <label class="form-control-radio js-toggle" for="month" data-show="#tax-months">
          Every month
         </label>
       </div>
+          <div class="js-hidden panel-indent" id="tax-months">
+          {{
+            form_macros.text_field({
+              id: 'tax-months',
+              label: 'How many months do you pay over?'
+            })
+          }}
+        </div><br>
       <div class="form-group">
         <input type="radio" id="year" name="minor">
-        <label class="form-control-radio" for="year">
+        <label class="form-control-radio js-toggle" for="year" data-hide="#tax-months">
           Annually
         </label>
       </div>
