updated does anyone else live... text to include partner

--- a/app/views/lis/5/live/others/people.html
+++ b/app/views/lis/5/live/others/people.html
@@ -13,7 +13,7 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    Does anyone else live in your home with you?
+    {{partnerlivetext}}
   </h1>
     
   <form action="people-handler" method="get" class="form">
