--- a/app/views/lis/5/save-continue/mem-word.html
+++ b/app/views/lis/5/save-continue/mem-word.html
@@ -17,7 +17,7 @@
         Create a memorable word
       </h1>
       
-      <p>You can save your application and return to it at any time. You will need your reference number from the previous page and a memeorable word.</p>
+      <p>You can save your application and return to it at any time. You will need your reference number from the previous page and a memorable word.</p>
       
       <form action="" method="get" class="form">
         <div class="form-item-wrapper">
