--- a/app/views/lis/5/signin.html
+++ b/app/views/lis/5/signin.html
@@ -21,14 +21,14 @@
     {{
       form_macros.text_field({
         id: 'user',
-        label: 'Username'
+        label: 'Application referenece number'
       })
     }}
     
     {{
       form_macros.text_field({
         id: 'PASSWORD',
-        label: 'Password'
+        label: 'Memorable word'
       })
     }}
 
@@ -41,10 +41,10 @@
     
     <h2 class="heading-medium">Problems signing in</h2>
     <ul>
-      <li class="navigation"><a class="cancel" href="">Don't have an account</a></li>
-      <li class="navigation"><a class="cancel" href="">Forgotten username</a></li>
-      <li class="navigation"><a class="cancel" href="">Forgotten password</a></li>
-      <li class="navigation"><a class="cancel" href="">Forgotten username and password</a></li>
+      <li class="navigation"><a class="cancel" href="">I don't have an account</a></li>
+      <li class="navigation"><a class="cancel" href="">Forgotten reference number</a></li>
+      <li class="navigation"><a class="cancel" href="">Forgotten memorable word</a></li>
+      <li class="navigation"><a class="cancel" href="">Forgotten reference number and memorable word</a></li>
     </ul>
   </form>
     </div>
