--- a/app/views/lis/5/need-to-know.html
+++ b/app/views/lis/5/need-to-know.html
@@ -19,7 +19,7 @@
   <p>You should have details of the following ready before you continue:</p>
 
   <ul class="list list-bullet">
-    <li>pensions or benefits you or your partner receive</li>
+    <li>income from work, pensions or benefits that you or your partner receive</li>
     <li>mortgages, rent or council tax you pay</li>
     <li>bank or savings accounts you have</li>
     <li>other people who live in your household, including their income</li>
