--- a/app/views/lis/5/you/pension/pension-credit.html
+++ b/app/views/lis/5/you/pension/pension-credit.html
@@ -25,8 +25,8 @@
         </label>
       </div>
       <div class="form-group">
-        <input type="radio" id="ssp" name="prencred">
-        <label class="form-control-radio" for="ssp">
+        <input type="radio" id="sc" name="prencred" value="sc">
+        <label class="form-control-radio" for="sc">
           Yes, savings credit
         </label>
       </div>
