changed savings credit questions including guarenteed credit to start kickout

--- a/app/views/lis/5/guarentee-credit.html
+++ b/app/views/lis/5/guarentee-credit.html
@@ -13,22 +13,21 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    Do you or your partner have more than £16,000?
-  </h1>
-  <p>Include savings, investments &amp; properties (but not place where you live)</p>  
+    Do you or your partner receive Pension Credit Guarentee Credit?
+  </h1>  
 
-  <form action="savings-kickout-handler" method="get" class="form">
+  <form action="guacredit-kickout-handler" method="get" class="form">
       <div class="form-item-wrapper">
         <fieldset>
           <div class="inline-form-groups">
             <div class="form-group">
-              <input type="radio" id="yes" name="savings" value="yes">
+              <input type="radio" id="yes" name="guacredit" value="yes">
               <label class="form-control-radio" for="yes">
                 Yes
               </label>
             </div>
             <div class="form-group">
-              <input type="radio" id="no" name="savings" value="no">
+              <input type="radio" id="no" name="guacredit" value="no">
               <label class="form-control-radio" for="no">
                 No
               </label>
