--- a/app/views/lis/5/you/pension/employment-pension-amount.html
+++ b/app/views/lis/5/you/pension/employment-pension-amount.html
@@ -84,7 +84,7 @@
     
     {{
       form_macros.button({
-        href: '../benefits/benefit-sprint3',
+        href: 'pension-credit',
         label: 'Save and continue'
       })
     }}
