--- a/app/views/lis/5/ko.html
+++ b/app/views/lis/5/ko.html
@@ -13,9 +13,23 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-      Do you receive any of the following?
+      Do you or your partner receive any of the following?
   </h1>
 
+  <details>
+
+  <summary><span class="summary">What we mean by partner</span></summary>
+
+  <div class="panel panel-border-narrow">
+
+    <p>
+      We use the term partner to mean a person you live with as part of a couple of the same or opposite sex, whether or not you are married or in a civil partnership.
+    </p>
+
+  </div>
+
+</details>
+  <br>
   <form action="kickout-handler" method="get" class="form">
     <div class="form-item-wrapper">
       <div class="form-group">
