--- a/app/views/lis/5/partner/pension/credit-amount.html
+++ b/app/views/lis/5/partner/pension/credit-amount.html
@@ -13,7 +13,7 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    How much Pension Credit Savings Credit do you receive per week?
+    How much Pension Credit Savings Credit does your partner receive per week?
   </h1>
     
   <form action="" method="get" class="form">
