--- a/app/views/lis/5/you/work.html
+++ b/app/views/lis/5/you/work.html
@@ -15,7 +15,9 @@
       <h1 class="heading-large">
         Do you have a job?
       </h1>
-  
+      
+      <p class="form-hint">Include work for an employer, self employed work, and paid voluntary or charity work.</p>
+      
       <form action="work-handler" method="get" class="form">
           <div class="form-item-wrapper">
             <fieldset>
