--- a/app/views/lis/5/live/mortgaged/joint.html
+++ b/app/views/lis/5/live/mortgaged/joint.html
@@ -13,7 +13,7 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    Are {{partnerortext}} a joint owner of the place where you live?
+   {{jointownertext}}
   </h1>
   
   <form action="" method="get" class="form">
