updated homepage for sprint 4

--- a/app/views/lis/5/guarentee-credit.html
+++ b/app/views/lis/5/guarentee-credit.html
@@ -13,7 +13,7 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    Do you or your partner receive Pension Credit Guarentee Credit?
+    Do you or your partner receive Pension Credit Guarantee Credit?
   </h1>  
 
   <form action="guacredit-kickout-handler" method="get" class="form">
