--- a/app/views/sprint4.html
+++ b/app/views/sprint4.html
@@ -39,10 +39,13 @@
         <li><span class="strong">What we're improving this sprint:</span> </li>
         <li>Questions have been improved about others in the home.</li>
       </ul>
-  
-      <ul>
-        <li><span class="strong">What we found:</span> </li>
-        <li>(Results posted soon)</li>
+      
+      <p><span class="strong">What we found:</span></p>
+      <ul class="list list-bullet">
+        <li>Users we tested with (low digital skills) found the sign in confusing. They seemed to be more inclined to use a memorable word.</li>
+        <li>They were overwhelmed by the <a href="/lis/4/save-continue/ref">sign in pages</a>, there is too much being asked for at once.</li>
+        <li>The page that tells users <a href="/lis/4/need-to-know">what they will need to apply</a> is not direct enough. One of our users was confused by the title Low Income Scheme, <span class="quote">'I'm not on the low income scheme'</span> - she thought it was a type of benefit. Many of the users don't know what the low income scheme is.</li>
+        <li>Several users tried to select the whole row on the <a href="/lis/4/lis-home">LIS home screen</a>.</li>
       </ul>
   
 </main>
