updates to exemption pages

--- a/app/assets/sass/nhs_application.scss
+++ b/app/assets/sass/nhs_application.scss
@@ -344,6 +344,15 @@ hr {
   width:92%;
 }
 
+.second-detail-block {
+  float: left;
+  border-top: 5px solid $nhs-blue;
+  padding: 10px 20px; 
+  background: #ededed;
+  width:92%;
+  margin-top:20px;
+}
+
 .certcode {
   font-size: 3.6rem;
 }
