--- a/app/views/lis/5/exemption/hc3certificate.html
+++ b/app/views/lis/5/exemption/hc3certificate.html
@@ -62,6 +62,20 @@
       <p>Valid from: <strong>01 June 2016</strong></p>
       <p>Valid until: <strong>31 May 2017</strong></p>
       </div>
+      <div class="second-detail-block">
+      <h3 class="heading-medium">Your certificate</h3>
+      <p><a href="hc3email">Email</a> it to me</p>
+      <p><a href="/public/images/hc3.pdf" target="blank">Download</a> it to my device</p>
+      <p><a href="#">Print</a> it for my records</p>
+            <details>
+        <summary><span class="summary">I can't access my certificate</span></summary>
+        <div class="panel panel-border-narrow">
+          <p>
+            If you don't have access to a printer or this is not your own computer we can <a href=#>send a copy in the post</a>
+          </p>
+        </div>
+      </details>
+      </div>
   </div>
   </div>
 </main>
