--- a/app/views/lis/5/exemption/hc3email.html
+++ b/app/views/lis/5/exemption/hc3email.html
@@ -9,7 +9,7 @@
           <img src="{{assetPath}}images/nhs-rev-logotype.svg" alt="">
         </a>
 
-        <h1 class="heading-large ex-header">HC2 Certificate for full help with health costs</h1>
+        <h1 class="heading-large ex-header">HC3 Certificate for help with health costs</h1>
 
         {% block header-controls %}{% endblock %}
 
@@ -22,19 +22,18 @@
   <div class="email-ex">
     <div class="email-text">
       <p>
-      <h2 class="heading-medium">Bill Smith</h2>
+      <h2 class="heading-medium">Priya and Vinay Mattu</h2>
         <strong>Certificate number:</strong> 123 456 789<br>
 
         <strong>Valid from:</strong> 01 June 2016<br>
 
         <strong>Valid until:</strong> 31 May 2017</p> 
         <p>
-        You are entitled to <strong>free NHS prescriptions</strong><br><br>
-        You are entitled to <strong>free NHS dental treatment</strong><br><br>
-        You are entitled to <strong>free NHS sight tests</strong><br><br>
-        You are entitled to the <strong>full value of a voucher towards the cost of glasses and contact lenses</strong><br><br>
-        You are entitled to a <strong>refund of necessary costs of travel to receive NHS treatment</strong><br><br>
-        You are titled to <strong>free NHS wig and fabric supports</strong>
+        You pay a maximum of <strong>£107.16</strong> towards NHS dental treatment<br><br>
+        You pay a maximum of <strong>£35.72</strong> towards NHS sight tests<br><br>
+        You pay <strong>£71.44</strong> towards an optical voucher for glasses and contact lenses<br><br>
+        You pay a maximum of <strong>£35.72</strong> in any one week, towards the costs of travel to receive NHS treatment<br><br>
+        You pay a maximum of <strong>£107.16</strong> towards NHS wig and fabric supports
       </p>
     </div>
   </div>
