--- a/app/views/lis/5/lis-home.html
+++ b/app/views/lis/5/lis-home.html
@@ -20,7 +20,7 @@
           Complete the following sections.
         </p>
         <table class="data-table">
-          <tr>
+          <tr onclick="document.location = 'you/registration;">
             <td>About you</td>
             <td><span id="about_you_status" class="notstarted-text">{{aboutYouStatus}}</span> 
             <a href="you/registration">{{aboutYouLink}}</a></td>
