--- a/public/stylesheets/nhs_application.css
+++ b/public/stylesheets/nhs_application.css
@@ -2075,6 +2075,14 @@ hr {
   background: #ededed;
   width: 92%; }
 
+.second-detail-block {
+  float: left;
+  border-top: 5px solid #0072C6;
+  padding: 10px 20px;
+  background: #ededed;
+  width: 92%;
+  margin-top: 20px; }
+
 .certcode {
   font-size: 3.6rem; }
 
