updates to exemption pages

--- a/app/views/lis/5/part-help.html
+++ b/app/views/lis/5/part-help.html
@@ -20,8 +20,8 @@
     <li>A copy of your certificate has been emailed to <a href="../5/exemption/hc3email">m.smith@inter.net</a></li>
     <li><a href="exemption/hc3certificate">View my certificate</a></li>
     <li><a href="/public/images/hc3.pdf" target="blank">Download my certificate</a></li>-->
-    <li>You can download or print a copy of your certificate at any time by signing into this service.</li>
-    <li>      
+    <li>You can download or print a copy of your certificate at any time by signing into this service, using your application number and memorable word.</li>
+    <!--<li>      
       <details>
         <summary><span class="summary">I can't access my certificate</span></summary>
         <div class="panel panel-border-narrow">
@@ -30,7 +30,7 @@
           </p>
         </div>
       </details>
-    </li>
+    </li>-->
 
   </ul>
   
