--- a/app/views/lis/5/lis-home.html
+++ b/app/views/lis/5/lis-home.html
@@ -20,22 +20,22 @@
           Complete the following sections.
         </p>
         <table class="data-table">
-          <tr onclick="document.location = 'you/registration;">
+          <tr class='clickable-row' data-href='you/registration'>
             <td>About you</td>
             <td><span id="about_you_status" class="notstarted-text">{{aboutYouStatus}}</span> 
             <a href="you/registration">{{aboutYouLink}}</a></td>
           </tr>
-          <tr>
+          <tr class='clickable-row' data-href='partner/partner'>
             <td>About your partner</td>
             <td><span id="about_partner_status" class="notstarted-text">{{aboutPartnerStatus}}</span> 
             <a href="partner/partner">{{aboutPartnerLink}}</a></td>
           </tr>
-          <tr>
+          <tr class='clickable-row' data-href='assets/property'>
             <td>Property, savings &amp; money</td>
             <td><span id="property_status" class="notstarted-text">{{propertyStatus}}</span> 
             <a href="assets/property">{{propertyLink}}</a></td>
           </tr>
-          <tr>
+          <tr class='clickable-row' data-href='live/hospital'>
             <td>About where you live</td>
             <td><span id="where_you_live_status" class="notstarted-text">{{whereYouLiveStatus}}</span> 
             <a href="live/hospital">{{whereYouLiveLink}}</a></td>
